# tes3conv

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  readme.md
.github/workflows/: build-macos.yaml  build-ubuntu.yaml  build-windows.yaml  build.yaml  check.yaml  release.yaml
plugins/Beyond Compare/: TES3Format.bcpkg
plugins/WinMerge/: CompareTES3Files.sct
src/: main.rs
