[package]
name = "tes3conv"
version = "0.2.1"
authors = ["Greatness7 <Greatness7@gmail.com>"]
edition = "2021"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[dependencies]
mimalloc = { version = "^0.1", default-features = false }
serde_json = "^1.0"

[dependencies.clap]
version = "^4.3"
default-features = false
features = ["std", "help", "usage", "suggestions"]

[dependencies.tes3]
git = "https://github.com/Greatness7/tes3"
rev = "161d7841c3458c12c7fe9b046cf4ab650b096df9"
default-features = false
features = ["esp", "nightly", "simd", "serde"]
