[package]
name = "tes3conv"
version = "0.4.0"
authors = ["Greatness7 <Greatness7@gmail.com>"]
edition = "2021"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[dependencies]
mimalloc = { version = "^0.1", default-features = false }
serde_json = "^1.0"

[dependencies.clap]
version = "^4.3"
default-features = false
features = ["std", "help", "usage", "suggestions"]

[dependencies.tes3]
# path = "../tes3/"
git = "https://github.com/Greatness7/tes3"
rev = "95cbc2cad2c574b023da879e308d3f6f6c4c3e04"
default-features = false
features = ["esp", "nightly", "simd", "serde"]
