[package]
name = "tes3conv"
version = "0.4.1"
authors = ["Greatness7 <Greatness7@gmail.com>"]
edition = "2021"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[dependencies]
serde_json = "^1.0"

[dependencies.clap]
version = "^4.3"
default-features = false
features = ["std", "help", "usage", "suggestions"]

[dependencies.tes3]
git = "https://github.com/Greatness7/tes3"
rev = "51fae82b79838d76a39d0d1d0d472d7f48e8577f"
# path = "../tes3/"
default-features = false
features = ["esp", "serde", "serde-zstd"]

[dependencies.mimalloc]
git = "https://github.com/purpleprotocol/mimalloc_rust.git"
rev = "eff21096d5ee5337ec89e2b7174f1bbb11026c70"
default-features = false
